infrastructure/k8s/moderation-deployment.yml
# kubectl apply -f ....

apiVersion: apps/v1
kind: Deployment
metadata:
    name: moderation-deployment
spec:
    replicas: 1
    # Find Pods with the label app: moderation
    selector:
        matchLabels:
            # label == key / value pair
            # app !== special meaning it could be alezane: moderation
            app: moderation
    # Config of the pod we want to create
    template:
        # === Pod => label : app: moderation
        metadata:
            labels:
                app: moderation
        # config of the pod ~~ config file pod
        spec:
            # Array
            # "-" new entity in the []
            # We can create xContainer in a pod
            containers:
                # container name ==> moderation
                -   name: moderation
                    # Exact docker img we want to use (:0.0.1)
                    # version === k8s assume this image is on local ; !== (none or :latest) check on docker hub
                    image: msagres/ms-blog-moderation
# Custer IP def
---
apiVersion: v1
kind: Service
metadata:
    # name of the service (k8s service)
    name: moderation-service
spec:
    # Expose set of pods to the outside world
    # By default ClusterIP if non type is set
    # type: ClusterIP
    #
    # find all pods with the label app: posts <== Deployment (template/metadata/labels)
    selector:
        app: moderation
    # list the ports needed to be exposed on the pod (index.js => port:4000)
    # array of entries
    # ==> port 4000 (node service) ==> targetPort 4000 (index.js)
    ports:
        -   name: moderation
            protocol: TCP
            # port of node k8s service
            port: 4003
            # port of index.js
            targetPort: 4003
